--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
     "@sendgrid/mail": "^7.4.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroicons": "^1.0.1",
+    "heroicons-react": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-carousel": "^1.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
